[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "torsional_diffusion"
version = '1.0.0'
requires-python = ">=3.12"
dependencies = [
    "rdkit>=2024",
    "torch",
    "pyaml",
    "spyrmsd",
    "pytest",
    ]
authors = [{name = "Sung-Hun Bae", email="sunghun.bae@gmail.com"}, ]
maintainers = [{name = "Sung-Hun Bae", email="sunghun.bae@gmail.com"}, ]
description = "Python package for torsional-diffusion"
readme = "README.md"
license = "MIT"
keywords = ["torsion", "diffusion", "conformer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    ]

[project.urls]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
